@@ -265,8 +265,6 @@ public abstract class MapLayer implements Cloneable
      */
     public abstract void copyTo(MapLayer other);
 
-    public abstract boolean isUsed(Tile t);
-
     public abstract boolean isEmpty();
 
     /**
