@@ -260,6 +260,8 @@ tool.erase.name=Erase
 tool.eyedropper.name=Eye dropper
 tool.fill.name=Fill
 tool.movelayer.name=Move layer
-tool.moveobject.name=Move object
+tool.addobject.name=Add objects
+tool.removeobject.name=Remove objects
+tool.moveobject.name=Move objects
 tool.paint.name=Paint
 tool.select.name=Select
